<resources>
    <string name="app_name">WasteMate</string>
    <string name="label_paired_devices_header_text">Dispositivos Vinculados</string>
    <string name="label_available_devices_header_text">Dispositivos Disponibles</string>
    <string name="label_shake_device">Sacuda el dispositivo para acceder a las opciones de administración</string>
    <string name="label_bluetooth_required_text">Se requiere Bluetooth</string>
    <string name="label_activate_bluetooth">No es posible conectarse al dispositivo sin Bluetooth. \nPor favor, actívelo para continuar</string>
    <string name="button_activate_bluetooth_text">Activar</string>
    <string name="bluetooth_icon_content_description">Icono de Bluetooth</string>
    <string name="configuration_button_content_description">Icono de configuracion</string>
    <string name="button_disable_text">Deshabilitar contenedor</string>
    <string name="button_start_maintenance_text">Iniciar mantenimiento</string>
    <string name="button_complete_maintenance_text">Finalizar mantenimiento</string>
    <string name="label_status_header_text">Estado:</string>
    <string name="label_current_percentage_header_text">Porcentaje Lleno:</string>
    <string name="label_connected_device_header_text">Dispositivo conectado:</string>
    <string name="button_refresh_status_content_description">Boton refrescar</string>
    <string name="label_grant_permissions_text">Conceda los siguientes permisos para el correcto funcionamiento de la aplicación</string>
    <string name="button_open_configuration_text">Abrir configuracion</string>
    <string name="toolbar_button_back_content_description">Boton atras</string>
    <string name="label_weight_limit_header_text">Peso Limite</string>
    <string name="label_critical_capacity_header_text">Porcentaje Capacidad Critica</string>
    <string name="label_minimum_distance_header_text">Porcentaje Sin Capacidad</string>
    <string name="button_send_text">Enviar</string>
    <string name="txt_weight_limit_hint">Min. 1 - Max. 3</string>
    <string name="txt_critical_capacity_hint">Min. 50 - Max. 70</string>
    <string name="txt_full_percentage_hint">Min. 75 - Max. 90</string>
    <string name="label_device_address_text">AA:32:AA:21</string>
    <string name="label_device_name_text">Galaxy Nexus</string>
    <string name="list_sensors_spinner">listSensors</string>

    <!--  CONFIGURACION DEL DROPDOWN DE SENSORES  -->
    <string-array name="sensors">
        <item>Flex</item>
        <item>PIR</item>
        <item>Ultrasonido</item>
    </string-array>
    <!--  FIN DE CONFIGURACION DEL DROPDOWN DE SENSORES  -->

    <!--  CONFIGURACION DE LOS DISPLAY NAME DEL ENUM Status.  -->
    <string name="status_not_connected">DESCONECTADO</string>
    <string name="status_unfilled">CAPACIDAD DISPONIBLE</string>
    <string name="status_critical_capacity">CAPACIDAD CRITICA</string>
    <string name="status_no_capacity">SIN CAPACIDAD</string>
    <string name="status_in_maintenance">EN MANTENIMIENTO</string>
    <string name="status_error">ERROR\n</string>
    <string name="bluetooth_connection_required">Conexión Bluetooth requerida</string>
    <string name="bluetooth_connection_required_message">Para el correcto funcionamiento de esta aplicación, es necesario conectarse a un dispositivo bluetooth.\nDe lo contrario, no se recibirán actualizaciones de estado ni se podrá interactuar con un contenedor.</string>
    <string name="button_go_to_settings">Ir a Configuracion</string>
    <string name="button_ignore">Ignorar</string>
    <string name="start_calibration_text">INICIAR CALIBRACIÓN</string>
    <string name="lbl_status_description_disconnected">Desconectado</string>
    <string name="lbl_connected_device_description_no_device_connected">Ningun Dispositivo Conectado</string>
    <string name="lbl_status_description_connecting">Conectando</string>
    <string name="lbl_connected_device_description_non_recognized">No Reconocido</string>
    <!--  FIN  CONFIGURACION DE DISPLAY NAME DEL ENUM Status  -->

</resources>