<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Sensores">

        <TextView
            android:id="@+id/label_weight_limit"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:text="@string/label_weight_limit_header_text"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_weight_limit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_weight_limit" />

        <TextView
            android:id="@+id/label_critical_percentage"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:text="@string/label_critical_capacity_header_text"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_critical_percentage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_critical_percentage" />

        <TextView
            android:id="@+id/label_full_percentage"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:text="@string/label_minimum_distance_header_text"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_full_percentage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_full_percentage" />

        <EditText
            android:id="@+id/txt_weight_limit"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/txt_weight_limit_hint"
            android:inputType="numberDecimal"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/txt_critical_percentage"
            android:layout_width="160dp"
            android:hint="@string/txt_critical_capacity_hint"
            android:layout_height="50dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_weight_limit"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/button_send_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="49dp"
            android:text="@string/button_send_text"
            android:theme="@style/ButtonStyle"
            android:background="@color/purple_700"
            android:drawableTint="@color/white"
            android:padding="10dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_full_percentage" />

        <EditText
            android:id="@+id/txt_full_percentage"
            android:layout_width="160dp"
            android:hint="@string/txt_full_percentage_hint"
            android:layout_height="50dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_critical_percentage"
            android:importantForAutofill="no" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>