<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fadingEdge="vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".DeviceListActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_paired_devices_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                android:text="@string/label_paired_devices_header_text" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_paired"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="27dp" />

            <TextView
                android:id="@+id/label_available_devices_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                android:text="@string/label_available_devices_header_text" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_available"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="44dp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Space
        android:id="@+id/space"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/label_shake"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/label_shake"
        android:layout_width="301dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="8dp"
        android:text="@string/label_shake_device"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>